--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <title>My times</title>
 </head>
 <body>
-  <header class="header">
+  <div class="header">
     <img src="./resources/images/myt_logo.jpg">
     <p class="title">My Times</p>
     <nav>
-      <ul>
-        <span><a href="index.html">World</a></span>
-        <span><a href="index.html">U.S.</a></span>
-        <span><a href="index.html">Tech</a></span>
-        <span><a href="index.html">Science</a></span>
-  </header>
+      <span><a href="index.html">World</a></span>
+      <span><a href="index.html">U.S.</a></span>
+      <span><a href="index.html">Tech</a></span>
+      <span><a href="index.html">Science</a></span>
+    </nav>
+  </div>
 </body>
 </html>
