--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <div class="content">
     <div class="column large">
       <div class="tuna">
-        <h2>Mother of /three Buys Tuna Steak at Phish concert.  Leaves, "Feeling Funny."</h2>
+        <h2>Mother of Three Buys Tuna Steak at Phish concert.  Leaves, "Feeling Funny."</h2>
+      </div>
+      <div class="text">
         <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec.
         Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor,
         sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet
@@ -41,27 +43,29 @@
     </div>
     <div class="column medium">
       <div class="fbi">
-      <h2>FBI Finds Action Star Guilty of False Advertising</h2>
-      <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem,
+        <h2>FBI Finds Action Star Guilty of False Advertising</h2>
+        <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem,
         vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna.
         Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
       </div>
       <div class="cats">
-      <h2>Cats in Control-Is It a Thing?</h2>
-      <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies,
+        <h2>Cats in Control-Is It a Thing?</h2>
+        <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies,
         nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
       </div>
     </div>
-    <div class="cloumn small">
+    <div class="column small">
       <div class="newsbites">
-      <h3>NEWS BITES</h3>
-      <p>Cat Emoji Goes Viral</p>
-      <p>Buy Youtube Views</p>
-      <p>Home Business Advertising Ideas</p>
-      <p>Advertising Internet Online</p>
-      <p>Illustration in Marketing Materials</p>
-      <p>Finally a Top Secret Way You Can</p>
-    </div>
+        <h3>NEWS BITES</h3>
+      </div>
+      <div class="text">
+        <p>Cat Emoji Goes Viral</p>
+        <p>Buy Youtube Views</p>
+        <p>Home Business Advertising Ideas</p>
+        <p>Advertising Internet Online</p>
+        <p>Illustration in Marketing Materials</p>
+        <p>Finally a Top Secret Way You Can</p>
+      </div>
     </div>
   </div>
   <div class="footer">
