Complete large column layout.

--- a/index.html
+++ b/index.html
@@ -26,21 +26,27 @@
         sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet
         lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
       </div>
-      <div class="orca">
-        <h2>Orca Spends Vacation at Land World Puget</h2>
-        <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+      <div class="otherstories">
+        <div class="leftcolumn">
+          <div class="orca">
+            <h2>Orca Spends Vacation at Land World Puget</h2>
+            <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+          </div>
+          <div class="earthspin">
+            <h2>Earth Spins Backwards for 2017</h2>
+          </div>
+        </div>
+        <div class="rightcolumn">
+          <div class="earlyburger">
+            <h2>Burger for Breakfast: How Early is too Early?</h2>
+            <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+          </div>
+          <div class="cameras">
+            <h2>Research Shows Cameras Erase Memory</h2>
+          </div>
+        </div>
       </div>
-      <div class="earthspin">
-        <h2>Earth Spins Backwards for 2017</h2>
-      </div>
-      <div class="earlyburger">
-        <h2>Burger for Breakfast: How Early is too Early?</h2>
-        <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
-      </div>
-      <div class="cameras">
-        <h2>Research Shows Cameras Erase Memory</h2>
-      </div>
-    </div>
+  </div>
     <div class="column medium">
       <div class="fbi">
         <h2>FBI Finds Action Star Guilty of False Advertising</h2>
