Add remaining material and css.

--- a/index.html
+++ b/index.html
@@ -63,8 +63,6 @@
     <div class="column small">
       <div class="newsbites">
         <h3>NEWS BITES</h3>
-      </div>
-      <div class="text">
         <p>Cat Emoji Goes Viral</p>
         <p>Buy Youtube Views</p>
         <p>Home Business Advertising Ideas</p>
@@ -75,6 +73,18 @@
     </div>
   </div>
   <div class="footer">
+    <div class="footernav">
+      <span class="footertitle">MY Times</span>
+      <nav>
+        <span><a href="index.html">World</a></span>
+        <span><a href="index.html">U.S.</a></span>
+        <span><a href="index.html">Tech</a></span>
+        <span><a href="index.html">Science</a></span>
+      </nav>
+    </div>
+    <div class="copyright">
+      <p>© 2016, My Times (A Division of Codecademy bite)</p>
+    </div>
   </div>
 </body>
 </html>
